--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bn.js": "^5.2.0",
     "core-js": "^3.6.5",
+    "js-sha256": "^0.9.0",
+    "near-api-js": "^0.42.0",
+    "url-pattern": "^1.0.3",
     "vue": "^3.0.0"
   },
   "devDependencies": {
